--- a/contact.html
+++ b/contact.html
@@ -128,7 +128,7 @@
             <div class="row g-4">
                 <div class="col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <h6 class="text-secondary text-uppercase">Get In Touch</h6>
-                    <h1 class="mb-4">Contact For Any Query</h1>
+                    <h1 class="mb-4">Reach Out to us for any query</h1>
                     <p class="mb-4">Use this form anytimeyou want to talk to us, You can also tect us or call the telephone number given in the footer. <a target="_blank" href="/docs/testpg.pdf">Download Now</a>.</p>
                     <iframe class="position-relative w-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15950.3330832606!2d30.052385460160032!3d-1.917895419034522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca40763be708b%3A0x10885382109cecfc!2sGisozi%2C%20Kigali!5e0!3m2!1sen!2srw!4v1746825158749!5m2!1sen!2srw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
@@ -153,7 +153,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabshq@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
