--- a/about.html
+++ b/about.html
@@ -82,13 +82,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link">Vision</a>
-                    <a href="about.html" class="nav-item nav-link">Our Mission</a>
-                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>
-                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>
-                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>
-                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>
-                    <a href="contact.html" class="nav-item nav-link active">Reach Out</a>
+                                        <a href="index.html" class="nav-item nav-link">Vision</a>                    <a href="about.html" class="nav-item nav-link active">Our Mission</a>                    <a href="service.html" class="nav-item nav-link">Breakthrough Solutions</a>                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>                    <a href="team.html" class="nav-item nav-link">Connect With Experts</a>                    <a href="testimonial.html" class="nav-item nav-link">Success Stories</a>                    <a href="booking.html" class="nav-item nav-link">Schedule Now</a>                    <a href="contact.html" class="nav-item nav-link">Reach Out</a>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
                 </div>
